Mejora al estilo de detalle

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -533,7 +533,7 @@ button, input, optgroup, select, textarea {
 }
 
 main section div.cantidad input{
-	width: 60px;
+	width: 50px;
 	height: 25px;
 }
 
@@ -653,6 +653,24 @@ main article .product-name{
 
 /*Estilos Detalle*/
 
+.detalle{
+	width: 90%;
+	margin: 0 auto;
+}
+
+.img-p{
+	width: 50%;
+	height: 50%;
+}
+
+.menos{
+	width: 25px;
+}
+
+.cant-det{
+	width: 50px;
+}
+
 .titulo-detalle h2{
 	display: flex;
 	justify-content: flex-start;
@@ -664,6 +682,11 @@ section.detalle article {
     display: flex;
     justify-content: space-around;
 	margin: 3%;
+}
+
+.detalle-descripcion{
+	margin: 0% 50% 1% 3%;
+	text-align: justify;
 }
 
 .info-detalle nav{
@@ -690,10 +713,5 @@ section.detalle article {
 
 .info-detalle p{
 	margin: 0% 5% 5% 5%;
-	text-align: justify;
-}
-
-.detalle-descripcion{
-	margin: 0% 50% 1% 3%;
 	text-align: justify;
 }
