--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -28,9 +28,9 @@
                                 <option value="borrador">borrador</option>
                             </select>
                             <div class="detalle-cantidad">
-                                <input type="submit" value="-">
-                                <input type="number" value="cantidad">
-                                <input type="submit" value="+">
+                                <input type="submit" value="-" class="menos">
+                                <input type="number" value="cantidad" class="cant-det">
+                                <input type="submit" value="+" class="mas">
                             </div>
                             <div class="agregar-carrito">
                                 <button type="submit">Agregar al carrito</button>
