--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -642,13 +642,21 @@ main .form-edicion p
 
 /*Estilos listado de productos*/
 main article .product-img{
-	width: 100%;
+	width: 90%;
+	height: 90%;
+	margin: inherit;
 }
 
 main article .product-name{
 	width: 100%;
     border-top: 1px solid #ebebeb;
     padding: 15px;
+}
+
+div.products-products article{
+	margin: 4%;
+	box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.44);
+    border-radius: 20px;
 }
 
 /*Estilos Detalle*/
