--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -642,9 +642,9 @@ main .form-edicion p
 
 /*Estilos listado de productos*/
 main article .product-img{
-	width: 90%;
-	height: 90%;
-	margin: inherit;
+	width: 100%;
+	height: 100%;
+	border-radius: 20px;
 }
 
 main article .product-name{
@@ -653,10 +653,42 @@ main article .product-name{
     padding: 15px;
 }
 
+.products-products{
+	margin: 4%
+}
+
 div.products-products article{
-	margin: 4%;
+	margin: 10% 5%;
 	box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.44);
     border-radius: 20px;
+}
+
+@media(min-width: 425px){
+	div.products-products article{
+		margin: 2% 0%;
+		width: 40%;
+	}
+	div.products-products{
+		display: flex;
+    	flex-direction: row;
+    	flex-wrap: wrap;
+    	justify-content: space-around;
+    	align-items: flex-start;
+	}
+}
+
+@media(min-width: 768px){
+	div.products-products article{
+		margin: 2% 0%;
+		width: 22%;
+	}
+	div.products-products{
+		display: flex;
+    	flex-direction: row;
+    	flex-wrap: wrap;
+    	justify-content: space-around;
+    	align-items: flex-start;
+	}
 }
 
 /*Estilos Detalle*/
