--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -16,7 +16,7 @@
                 <img src="/images/products/<%= producto.image_p %>" alt="<%= producto.name %>" class="product-img">
                 <div class="product-name">
                     <h2><%= producto.name %></h2>
-                    <h4><%= toThousand(producto.price) %></h4>
+                    <h4>$<%= toThousand(producto.price) %> MXN</h4>
                 </div>
             </article>
             <% }) %>
