--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -148,6 +148,8 @@ footer ul li img{
 	margin: 0;
 }
 
+
+
 /*Media query para tablets vertical */
 @media (min-width: 481px) {
 	header nav ul{
@@ -661,6 +663,19 @@ div.products-products article{
 	margin: 10% 5%;
 	box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.44);
     border-radius: 20px;
+}
+
+.buttonEnviar {
+    background-color: #9b0800; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+	margin-left: 45%;
+	margin-bottom: 20px;
 }
 
 @media(min-width: 425px){
