Agregando delete en controlador y rutas de products

--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -64,7 +64,7 @@
             </div>
         </section>
 
-        <a href="/productos/<%= product.id %>/edit/" class="buttonEnviar">
+        <a href="/productos/edit/<%= product.id %>" class="buttonEnviar">
             Editar producto
         </a>
 
