--- a/src/views/edicion.ejs
+++ b/src/views/edicion.ejs
@@ -12,7 +12,7 @@
         <h1>Editar producto <%=productToEdit.name%> cuyo numero es <%=productToEdit.id%></h1>
         <div class="form-edicion">
             
-            <form action="/products/<%=productToEdit.id%>/edit?_method=PATCH" method="POST" enctype="multipart/form-data">
+            <form action="/productos/<%=productToEdit.id%>/edit?_method=PATCH" method="POST" enctype="multipart/form-data">
                 <p>
                     <label for="nombre-producto">Nombre del producto:</label>
                     <input type="text" id="nombre-producto" name="nombre-producto" class="input-text"
@@ -52,15 +52,17 @@
                     <textarea id="instrucciones" name="instrucciones" class="input-area"><%= productToEdit.specs %>
                     </textarea>
                 </p>
-                <div class="botones-edicion">
-                    <button type="submit">Enviar</button>
-                    <button type="reset">Cancelar</button>
-                    <form action="/productos/:id?_method=DELETE" method="POST">
+                <div>
+                    <div class="botones-edicion">
+                        <button type="submit">Enviar</button>
+                        <button type="reset">Cancelar</button>                    
+                    </div>
+            </form>
+                    <form action="/productos/<%=productToEdit.id%>?_method=DELETE" method="POST" class="botones-edicion" style="display: inline-block; text-align: center;" >
                         <button type="submit">Eliminar</button>
                     </form>
-                    
                 </div>
-            </form>
+                
         </div>
     </main>
     <%- include('./partials/footer') %> 
