--- a/src/views/edicion.ejs
+++ b/src/views/edicion.ejs
@@ -11,45 +11,51 @@
         </div>
         <h1>Editar producto <%=productToEdit.name%> cuyo numero es <%=productToEdit.id%></h1>
         <div class="form-edicion">
-            
-            <form action="/productos/<%=productToEdit.id%>/edit?_method=PATCH" method="POST" enctype="multipart/form-data">
+      <!--
+              <form action="/productos/<%=productToEdit.id%>?_method=DELETE" method="POST" class="botones-edicion" style="display: inline-block; text-align: center;" >
+                        <button type="submit">Eliminar</button>
+      -->      
+            <form action="/productos/edit/<%=productToEdit.id%>?_method=PATCH" method="POST" enctype="multipart/form-data">
                 <p>
-                    <label for="nombre-producto">Nombre del producto:</label>
-                    <input type="text" id="nombre-producto" name="nombre-producto" class="input-text"
+                    <label for="name">Nombre del producto:</label>
+                    <input type="text" id="name" name="name" class="input-text"
                     value= <%= productToEdit.name %>>
                 </p>
                 <p> Imagen principal del producto </p>
                 <p><img src="/images/products/<%=productToEdit.image_p%>" style="width: 100px;"> </p>
-                    <label for="img-principal">Seleccionar otra imagen</label>                                      
-                    <input type="file" id="img-principal" name="img-principal" class="input-file">
+                    <label for="image_p">Seleccionar otra imagen</label>                                      
+                    <input type="file" id="image_p" name="image_p" class="input-file">
                 </p>
                 <p>
-                    <label for="img-secundaria1">Imagen secundaria 1:</label>
-                    <input type="file" id="img-secundaria1" name="img-secundaria1" class="input-file">
+                    <label for="image_1">Imagen secundaria 1:</label>
+                    <input type="file" id="image_1" name="image_1" class="input-file">
                 </p>
                 <p>
-                    <label for="img-secundaria2">Imagen secundaria 2:</label>
-                    <input type="file" id="img-secundaria2" name="img-secundaria2" class="input-file">
+                    <label for="image_2">Imagen secundaria 2:</label>
+                    <input type="file" id="image_2" name="image_2" class="input-file">
                 </p>
                 <p>
-                    <label for="precio">Precio:</label>
-                    <input type="number" id="precio" name="precio" class="input-text"
+                    <label for="price">Precio:</label>
+                    <input type="number" id="price" name="price" class="input-text"
                         value="<%= productToEdit.price %>"
                     >
                 </p>
                 <p>
-                    <label for="descripcion">Descripción:</label>
-                    <textarea id="descripcion" name="descripcion" class="input-area"><%= productToEdit.description %>
+                    <label for="description">Descripción:</label>
+                    <textarea id="description" name="description" class="input-area">
+                        <%= productToEdit.description %>
                     </textarea>
                 </p>
                 <p>
-                    <label for="caracteristicas">Características:</label>
-                    <textarea id="caracteristicas" name="caracteristicas" class="input-area"><%= productToEdit.caracteristic %>
+                    <label for="caracteristic">Características:</label>
+                    <textarea id="caracteristic" name="caracteristic" class="input-area">
+                        <%= productToEdit.caracteristic %>
                     </textarea>
                 </p>
                 <p>
-                    <label for="instrucciones">Especificaciones:</label>
-                    <textarea id="instrucciones" name="instrucciones" class="input-area"><%= productToEdit.specs %>
+                    <label for="specs">Especificaciones:</label>
+                    <textarea id="specs" name="specs" class="input-area">
+                        <%= productToEdit.specs %>
                     </textarea>
                 </p>
                 <div>
