--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -13,9 +13,9 @@
         <div class="products-products">
             <% products.forEach(producto => { %>
             <article>
-                <img src="/images/products/<%= producto.image_p %>" alt="<%= producto.name %>" class="product-img">
+            <a href="/productos/<%= producto.id %>"><img src="/images/products/<%= producto.image_p %>" alt="<%= producto.name %>" class="product-img"></a>
                 <div class="product-name">
-                    <h2><%= producto.name %></h2>
+                    <a href="/productos/<%= producto.id %>"><h2><%= producto.name %></h2></a>
                     <h4>$<%= toThousand(producto.price) %> MXN</h4>
                 </div>
             </article>
