--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,12 +13,12 @@
             <h1>Login</h1>
         </div>
         <div class="login">
-            <form method="GET" action="/">
+            <form method="post" action="/usuarios/login">
                 <p class="elt-login">
                     <label for="user"> Usuario:</label>
                 </p>
                 <p class="elt-login">
-                    <input type="text" id="user" name="user" placeholder="email">
+                    <input type="email" id="user" name="user" placeholder="email@locotes.com">
                 </p>
                 <p>
                     <label for="password">Contraseña</label>
