--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -67,7 +67,7 @@
         <ul>
             <li><a href="/">Home </a> </li>
             <li><a href="/carrito"> Carrito</a>  </li>
-            <li><a href = "/login"> Login</a> </li>
+            <li><a href = "/usuarios/login"> Login</a> </li>
             <li><a href="/registro"> Registro</a> </li>
         </ul>
     </nav>
