--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -97,6 +97,7 @@ main div form button:hover{
 footer {
     background-color: rgb(2, 0, 119);
 	padding-bottom: 40px;
+	margin-top: 30px;
 }
 footer section{
 	text-align: center;
@@ -774,4 +775,9 @@ section.detalle article {
 .info-detalle p{
 	margin: 0% 5% 5% 5%;
 	text-align: justify;
+}
+/*-ESTILOS--LISTA-DE-ARTICULOS-HOME-*/
+main .articulo-home{
+	min-width: 300px;
+	border:red 10px;
 }
