Agregando Ejs con cambios en las vistas - Falta agregar la ligica del registro

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -68,7 +68,7 @@
             <li><a href="/">Home </a> </li>
             <li><a href="/carrito"> Carrito</a>  </li>
             <li><a href = "/usuarios/login"> Login</a> </li>
-            <li><a href="/registro"> Registro</a> </li>
+            <li><a href="/usuarios/registrar"> Registro</a> </li>
         </ul>
     </nav>
 </header>
