Agregando las rutas de usuarios

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -778,6 +778,9 @@ section.detalle article {
 }
 /*-ESTILOS--LISTA-DE-ARTICULOS-HOME-*/
 main .articulo-home{
-	min-width: 300px;
-	border:red 10px;
+	width: 100vw;
+}
+main .articulo-home img{
+	width: 100%;
+	
 }
