--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -18,14 +18,20 @@
                     <label for="user"> Usuario:</label>
                 </p>
                 <p class="elt-login">
-                    <input type="email" id="user" name="user" placeholder="email@locotes.com">
+                    <input type="email" id="email" name="email" placeholder="email@locotes.com">
                 </p>
+                <% if (locals.errors && errors.email) { %>
+                    <div style="color: red; text-align: center;"><%= errors.email.msg %> </div>
+                <% } %>
                 <p>
                     <label for="password">Contraseña</label>
                 </p>
                 <p class="elt-login">
                     <input type="password" id="password" name="password">
                 </p>
+                <% if (locals.errors && errors.password) { %>
+                    <div style="color: red; text-align: center;"><%= errors.password.msg %> </div>
+                <% } %>
                     <input type="checkbox" name="rememberMe" value="recuerdame">
                     <label for="rememberMe"> Recuérdame </label>
                 <div class="botones-login">
