Agregando las validaciones de los sitios con middlewares

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,14 +6,10 @@
         <div class="alimentos">
             <ul>
               <li>
-                <a href="#">Alimentos   <i class="fas fa-caret-up"></i></a>
+                <a href="#"> Usuario  <i class="fas fa-caret-up"></i></a>
                 <ul>
-                  <li><a href="#">Perros</a></li>
-                  <li><a href="#">Gatos</a></li>
-                  <li><a href="#">Aves</a></li>
-                  <li><a href="#">Reptiles</a></li>
-                  <li><a href="#">Roedores</a></li>
-                  <li><a href="#">Peces</a></li>
+                  <li><a href="/usuarios/usuarioPerfil">Profile</a></li>
+                  <li><a href="/usuarios/logout">LogOut</a></li>
                 </ul>
               </li>
             </ul>
@@ -21,7 +17,7 @@
           <div class="accesorios">
             <ul>
               <li>
-                <a href="#">Accesorios   <i class="fas fa-caret-up"></i></a>
+                <a href="#">Alimentos <i class="fas fa-caret-up"></i></a>
                 <ul>
                     <li><a href="#">Perros</a></li>
                     <li><a href="#">Gatos</a></li>
@@ -36,7 +32,7 @@
           <div class="viviendas">
             <ul>
               <li>
-                <a href="#">Viviendas   <i class="fas fa-caret-up"></i></a>
+                <a href="#">Accesorios    <i class="fas fa-caret-up"></i></a>
                 <ul>
                     <li><a href="#">Perros</a></li>
                     <li><a href="#">Gatos</a></li>
